Revert "visual - doc spacing fix for algolia search"
This reverts commit 4f9ae7571f54626467f6570be105db1779759c16.

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -189,15 +189,3 @@
   display: block;
   width: 120px;
 }
-
-@media (min-width: 769px) and (max-width: 996px) {
-  .navbar__item.navbar-github-link {
-    margin-right: 160px;
-  }
-}
-
-@media (max-width: 768px) {
-.navbar__item.navbar-github-link {
-  margin-right: 40px;
-}
-}
